--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -12,7 +12,7 @@ header-includes:
     - \usepackage{setspace}
     - \doublespacing
 abstract:
-    "Accounts of big data practices often assume that they target individuals. Personalization, with all the risks of discrimination and bias it entails, has been the critical focus in accounts of consumption, government, social media and health. This paper argues that personalization is part of a more expansive change in probabilization that, in principle, is not reducible to individual attributes and actions. It describes the 'personalization' of an online grocery shopping recommender system to list a small number of grocery items of personal relevance for each of the millions of online grocery shoppers at a major UK supermarket chain. Drawing on a theory of probability proposed by the philosopher of science Karl Popper and anthropological work on shopping, it suggests that the attempt to generate  personalized predictions changes relations to others and things. Using a mixture of discourse analysis and code-based reconstruction of key elements of the recommender system, it suggests that personalization is one facet of an open-ended weave of propensities associated with people and things in contemporary big data configurations. The paper explores how, in the context of recommender systems, the constitutive incompleteness of shopping lists, their propensity to expand or change, might be more important than their capacity to be personalized."
+    "Accounts of big data practices often assume that they target individuals. Personalization, with all the risks of discrimination and bias it entails, has been the critical focus in accounts of consumption, government, social media and health. This paper argues that personalization through models using large-scale data is part of a more expansive change in probabilization that, in principle, is not reducible to individual or 'personal' attributes and actions. It describes the 'personalization' of an online grocery shopping recommender system to list a small number of grocery items of personal relevance for each of the millions of online grocery shoppers at a major UK supermarket chain. Drawing on a theory of probability proposed by the philosopher of science Karl Popper and anthropological work on shopping, it suggests that the attempt to generate  personalized predictions necessarily incorporates impersonal relations to others and things. Using a mixture of discourse analysis and code-based reconstruction of key elements of the recommender system, it suggests that personalization is one facet of an open-ended weave of propensities associated with people and things in contemporary big data configurations. The paper explores how, in the context of recommender systems, the constitutive incompleteness of shopping lists, their propensity to expand or change, might be more important than their capacity to be personalized."
 ---
 
 ```{r setup2, cache=FALSE, include=FALSE}
@@ -32,17 +32,17 @@ opts_chunk$set(cache=TRUE)
 
 Big data practice often converts an existing state of affairs by adding a model or predictive elements based on the collection and analysis of data. This paper recounts the conversion of  an online grocery ordering system  from an older demographically-based recommendation system to a 'personal relevance' model. The main argument of the paper concerns how  personalization occurs in big data 'conversion events.' The term 'conversion event' has a dual sense. In recommender system design and web ecommerce, it refers to those occasions when a customer, user or site visitor clicks a specific hyperlink or purchases something. I also use it to refer to the common before-after narrative forms that proponents, developers and advocates of recommender systems adopt in describing, promoting, explaining or otherwise talking about big data, analytics or predictive modelling practices. In recent research and opinion on recommendations, personalization has been seen as the goal of predictive modelling.  Big data discourse in its promissory mode attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schonberger_2013]. Conversely, current debates about the problems of big data emphasize the need to protect people from personalization.  Joseph Turow and co-authors conclude in their critical account of the transformation of retail space by business analytics: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public' [@Turow_2015, 476]. Analysis of internet filter bubbles and the growth of predictive platforms in industry and government  [@Pariser_2011; @ONeil_2016a] also centre on personalization. In this paper, I agree that a transformation or conversion event is occurring, but one which also, even in the midst of much ongoing personalization,  opens the possibility of conceiving of social ordering processes afresh. Like Louise Amoore and Viola Piotukh's call for a new epistemology of population  [@Amoore_2015, 360], I will argue that contemporary recommender systems afford us the opportunity to re-conceptualise long-standing assumptions about social order and structure. The average everydayness and familiarity of the example here -- grocery shopping -- allows some first hand engagement with the messiness, the entanglements, and potentials of this conversion event in ways that other interesting settings -- social media for instance -- do not.
 
-'Data-driven personalization' relies on predictions, themselves dependent on data practices ranging across acquisition, storage, transformation, exchange, integration, modelling and experimentation.  The reconstruction of a recommender system and its  personalized predictions that I undertake here centres on the notion of probability and its role in modelling and experimentation.  Although probabilistic calculations of events have  long-standing importance in many settings (insurance, medicine, experimental and field sciences, operations research, risk analysis, engineering design, public health,  economic modelling, etc.), probabilities have taken on an operational function in digital platforms associated with the web and social media.  They have become part of infrastructures, transactions, and event-structures. In order to take this _operational_ reality into account, we might understand probabilities in quasi-physicalist terms  defined by the philosopher of science Karl Popper as a 'world of propensities, as an unfolding process of realizing possibilities and of unfolding new possibilities' [@Popper_1990,19]. This operational-physicalist or sociotechnical notion of probability shifts our understanding of data analytics, especially in association with platforms [@Gillespie_2010], away from personalization. Finally,  it  draws  on the philosophy of science to frame an engagement with grocery recommendations in terms of probabilities and their worldly enactments. 
+'Data-driven personalization' relies on predictions, themselves dependent on data practices ranging across acquisition, storage, transformation, exchange, integration, modelling and experimentation.  The reconstruction of an online grocery shopping recommender system and its  personalized predictions that I undertake here centres on the notion of probability and its role in modelling and experimentation.  Although probabilistic calculations of events have  long-standing importance in many settings (insurance, medicine, experimental and field sciences, operations research, risk analysis, engineering design, public health,  economic modelling, etc.), probabilities have taken on an altered operational function in digital platforms.  They have become mundane part of the weave of infrastructures, transactions, and practices found in everyday life. In order to take the _operational_ reality of probabilities into account, we might understand probabilities in quasi-physicalist terms  defined by the philosopher of science Karl Popper as a 'world of propensities, as an unfolding process of realizing possibilities and of unfolding new possibilities' [@Popper_1990,19]. This operational-physicalist or sociotechnical notion of probability shifts our understanding of data analytics, especially in association with platforms [@Gillespie_2010], away from personalization. It  draws  on Popper's re-framing of probability as propensity to  engage with grocery recommendations in their worldly enactments. 
 
 The account is empirical in several respects. It departs from an ethnographic moment: being a member of the audience at an industry/academic conference where a data scientist was describing how personalized recommendations were created for online grocery orders.  The paper  draws on anthropological and sociological research concerning shopping and list-making to situate the recommender system amongst the social ordering practices of shopping and lists. It makes use of archaeological approaches, in the sense developed by Michel Foucault [@Foucault_1972] to identify and map functional statements and practices configuring the knowledge and order generated by such systems over time. It conducts several small-scale code-based experiments in order to reconstruct, using widely available code resources resources such as API (Application Programmer Interfaces) and software libraries for machine learning, some prototypical elements of the system in question.  Like some recent work in science and technology studies,  anthropology and media studies [@Marres_2017; @Marcus_2014; @Bogost_2012], the paper is  shaped by practical encounter with the 'object' -- code, data, web platforms --  it describes. At times, this mode of empirical philosophy may seem overly fixated on the technical minutiae of algorithms and recommender systems and inattentive to lived experience or practices. With some forbearance on the part of readers, however, the argument of the paper should resonate sociologically. It concerns the relationality of social life, or the consistency and regularity of relating and acting amid a world in where probabilities and calculations based on probabilities are widespread.
 
 # B. The conversion from demographic to personalized recommendation
 
-At one of the many industry-meets-academia events occurring in data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work with predictive models.[^11.1] Shreena Patel, a PhD graduate in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [customer science company ](https://www.dunnhumby.com/) [@dunnhumby_2017].  Her work at DunnHumby focuses on online grocery shopping at the supermarket chain Tesco.  Speaking to an audience of statisticians and operations researchers, Patel focused on the development and operation of predictive models underlying  shopping list recommendations. The presentation was filled with graphs, numbers, and tables concerning ongoing development of the 'Have you forgotten?' recommender system.
+At one of the many industry-meets-academia events occurring in data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work with predictive models.[^11.1] Their narrative often followed the 'before-Big Data and after-Big data' conversion form.  Shreena Patel, a PhD graduate in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [customer science company ](https://www.dunnhumby.com/) [@dunnhumby_2017].  Her work at DunnHumby focuses on online grocery shopping at the supermarket chain Tesco.  Speaking to an audience of statisticians and operations researchers, Patel focused on the development and operation of predictive models underlying  shopping list recommendations. The presentation was filled with graphs, numbers, and tables concerning ongoing development of the 'Have you forgotten?' recommender system.
 
 [^11.1]: More than 100  Data Science Institutes have been set up in North America, Europe and UK since around 2012. The traffic between higher education and data analytics in industry is intense and flows in several forms: people funding, research findings, software and technical devices (code) and training.
 
-Against the background of the sheer number of commodities and their distribution of prices, Patel's presentation presents two opportunities. First, by recounting, contextualising and commenting on the main steps in making the 'Have your forgotten?' list, we might follow some of the predictive sense-making done by data scientists and customer analytics teams working with transactional data in a typical commercial setting. Patel mentioned many of these steps only fleetingly in the presentation, for they are largely taken for granted as part of predictive analytic practice. Second, Patel focused on the renovation and updating of long-standing data-mining practice via a much more explicitly 'big data' and 'machine learning'- oriented implementation. Her presentation concerns a typical big data conversion event  in which a long-standing recommender system was replaced by a 'big data'-style system delivering 'personally relevant' recommendations.   What stands out from the presentation is the normality of the recommender system: it is part of a long-standing and ongoing transformation of grocery shopping. From a sociological standpoint, the interest lies less in specific technical innovations and more on how the ordering work done by recommender systems relates to the role of prediction in social order more generally.
+Against the background of the sheer number of commodities and their distribution of prices, Patel's presentation presents two opportunities. First, by recounting, contextualising and commenting on the main steps in making the 'Have your forgotten?' list, we might follow some of the predictive sense-making done by data scientists and customer analytics teams working with transactional data in a typical commercial setting. Patel mentioned many of these steps only fleetingly in the presentation, for they are largely taken for granted as part of predictive analytic practice. Second, Patel focused on the renovation and updating of long-standing data-mining practice via a much more explicitly 'big data' and 'machine learning'-oriented implementation. Her presentation concerns a typical big data conversion event  in which a long-standing recommender system was replaced by a 'big data'-style system delivering 'personally relevant' recommendations.   What stands out from the presentation is not any state-of-the-art innovation, but the ongoing life of the recommender system: the new predictive model is part of a long-standing and ongoing transformation of grocery shopping. From a sociological standpoint, the interest lies less in specific technical innovations and more on how the ordering work done by recommender systems relates to the role of prediction in social order more generally.
 
 # C. Shopping list orderings
 
@@ -183,7 +183,7 @@ Experimentalization, the practice of creating conditions that reduce disturbing 
 
 [^238.1]: It is difficult to gauge how much. Facebook reports that it has more than 1 million models operating in its infrastructure [@Dunn_2016].[@Christian_2012] provides information on the extent of A/B testing in web and social media. 
 
-Random allocation of customers to control and test groups occurs without taking individual propensities into account.  A/B testing  seeks to statistically validate effects -- the *uplift* -- of the model on  conversion rates by directly measuring the effects of the model on what people do.  The uplift refers to conversion events associated with the same groups of people. Effectively an experiment in creating micrologically different worlds, the randomised control trial  sets up a control mechanism that connects  the predictive model (the logistic regression), and the conversion event more broadly. With this experimentalisation, the conversion event narrative lacks grounding.[TBA: not happy with this ending] 
+Random allocation of customers to control and test groups occurs without taking individual propensities into account.  A/B testing  seeks to statistically validate effects -- the *uplift* -- of the model on  conversion rates by directly measuring the effects of the model on what people do.  The uplift refers to conversion events associated with the same groups of people. Effectively an experiment in creating micrologically different worlds, the randomised control trial  sets up a control mechanism that connects  the predictive model (the logistic regression), and the conversion event more broadly. Without this experimental connection, the conversion event narrative lacks grounding in a state of affairs in the world. 
 
 [^122]: See [@Lo_2002] for an introduction to the construction of experimental set ups for uplift models in marketing research. Market researchers and data miners seem to have started adopting a statistically-grounded experimental predictive practice around 2000. See for instance [@Almquist_2001]  Response modelling, 'propensity' modelling and uplift modelling all seek to identify associations between 'treatments' or interventions and the 'Responders', the people  affected by the treatment.
 
@@ -205,8 +205,8 @@ The 'personal relevance' model sought to include the similarities and complement
 
 # F. Conclusion
 
-The personalization of recommendations has been a distinctive feature of big data conversion narratives and practice. The Tesco recommender system, starting from its early experiments with demographic data-mining, its later adoption of a rule-based 'market basket' analysis system, and its recent implementation of a machine learning 'personal relevance model' follows the trajectory of personalization.  Its conversion event largely takes the form of personalization. Only because grocery shopping is  personally pre-ordered by lists can a predictive recommendation, provisionally conducive to new conversion events, gain traction.  Individualizing personalization, however,  is ill-fit to the socially complex negotiations of grocery shopping, and tends to obscure other implications.  Conversion events, both in the sense of the purchases made on the basis of recommendation and the narratives of changes in modelling practice related by data scientists, do not easily map to personalization. They include relations running between people and things in time. They include an ongoing process of adjusting, scaffolding, intervening and configuring orders.
+The personalization of recommendations has been a distinctive feature of big data conversion narratives and practice. The Tesco recommender system, starting from its early experiments with demographic data-mining, its later adoption of a rule-based 'market basket' analysis system, and its recent implementation of a machine learning 'personal relevance model' follows the trajectory of personalization.  Its recent big data conversion event largely takes the form of personalization. Individualizing personalization, however,  is ill-fit to the socially complex negotiations of grocery shopping, and tends to obscure other implications.  Conversion events, both in the sense of the purchases made on the basis of recommendation and the narratives of changes in modelling practice related by data scientists, do not easily map to personalization. They include relations running between people and things in time. They include an ongoing process of adjusting, scaffolding, intervening and configuring orders. Only because grocery shopping is  personally pre-ordered by lists can a predictive recommendation, provisionally conducive to new conversion events, gain traction.  
 
-I suggest that we might understand what precedes and exceeds personalization as probabilization.  If, as Popper argues, a propensity-based account of probabilities 'amounts to generalizing and extending the idea of forces again' [@Popper_1990,14], then we should see the compute  platforms, databases, software libraries, web interfaces and global supply chain logistics as part of this conversion event, as a tendency in the process of realization. When we track what is practically done to construct a personal relevance model and apply it to a shopping list, we see conditional probabilities assembled in predictive models, the rhythms of  platform and infrastructural configurations in gathering and processing data,  and the open-ended construction of features in data. In various ways, they shift and complicate the  associations between people and things, people and people, and things with things. The framing of this conversion as a 'flat difference of degree, such that it appears as though everything is calculable' [@Amoore_2015, 361] risks misunderstanding the different propensities tending to realization.  If social order is made of propensities to associate, if to be social is a propensity to associate, then big data conversion events operationalize association in matrices of propensity.
+I suggest that we might understand what precedes and exceeds personalization as probabilization. The framing of this conversion as a 'flat difference of degree, such that it appears as though everything is calculable' [@Amoore_2015, 361] risks misunderstanding the different propensities tending to realization.   If, as Popper argues, a propensity-based account of probabilities 'amounts to generalizing and extending the idea of forces again' [@Popper_1990,14], then we should see the compute  platforms, databases, software libraries, web interfaces and global supply chain logistics as part of this conversion event, as  tendencies or propensities in  the process of realization. When we track what is practically done to construct a personal relevance model and apply it to a shopping list, we see conditional probabilities assembled in predictive models, but also in the rhythms of  platform and infrastructural configurations and experiments that gather and process data,  and in the open-ended construction of features in data. In various ways, these tendencies shift and complicate the  associations between people and things, people and people, and things with things. They cut across boundaries between the personal and impersonal.  If social order is made of propensities to associate, if to be social is a propensity to associate, then big data conversion events operationalize association in matrices of propensity.
 
 # References
